[Feature] Load repositories detail into table as widgets
-Load repositories detail into table as widgets
-Add edit widget

--- a/gui/gitautodeploy_ui.ui
+++ b/gui/gitautodeploy_ui.ui
@@ -607,6 +607,9 @@
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
+          <property name="editTriggers">
+           <set>QAbstractItemView::NoEditTriggers</set>
+          </property>
           <column>
            <property name="text">
             <string>Repository name</string>
